objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Calidad__c</fullName>
        <label>Calidad</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mala</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Buena</fullName>
                </value>
                <value>
                    <fullName>Excelente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_custom_field__c</fullName>
        <label>Date custom field</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_used_in__c</fullName>
        <label>Document used in:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESPortal</fullName>
                </value>
                <value>
                    <fullName>Expediente X</fullName>
                </value>
                <value>
                    <fullName>Taleo</fullName>
                </value>
                <value>
                    <fullName>Ninguno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Available__c</fullName>
        <label>Language Available</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Latin</fullName>
                </value>
                <value>
                    <fullName>swedish</fullName>
                </value>
                <value>
                    <fullName>romanian</fullName>
                </value>
                <value>
                    <fullName>polish</fullName>
                </value>
                <value>
                    <fullName>chinese</fullName>
                </value>
                <value>
                    <fullName>hindi</fullName>
                </value>
                <value>
                    <fullName>thai</fullName>
                </value>
                <value>
                    <fullName>russian</fullName>
                </value>
                <value>
                    <fullName>hungarian</fullName>
                </value>
                <value>
                    <fullName>finnish</fullName>
                </value>
                <value>
                    <fullName>italian</fullName>
                </value>
                <value>
                    <fullName>czech</fullName>
                </value>
                <value>
                    <fullName>portuguese</fullName>
                </value>
                <value>
                    <fullName>danish</fullName>
                </value>
                <value>
                    <fullName>norwegian</fullName>
                </value>
                <value>
                    <fullName>dutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Field1__c</fullName>
        <label>Text Field1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Field2__c</fullName>
        <label>Text Field2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_button__c</fullName>
        <formula>ContentUrl</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test button</label>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Test_general</fullName>
        <active>true</active>
        <label>Test general</label>
    </recordTypes>
</CustomObject>